# logic

./: CMakeLists.txt
.github/workflows/: lint.yml  linux.yml
include/logic/: array.hh  big_num.hh  bit.hh  logic.hh  struct.hh  union.hh  util.hh
src/: CMakeLists.txt  util.cc
tests/: CMakeLists.txt  test_4state.cc  test_array.cc  test_conversion.cc  test_logic.cc  test_regression.cc  test_struct.cc  test_union.cc  test_util.cc
